--- a/apps/sentry-repro-e2e/project.json
+++ b/apps/sentry-repro-e2e/project.json
@@ -1,65 +1,75 @@
 {
-  "name": "sentry-repro-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/sentry-repro-e2e/src",
+  "implicitDependencies": ["sentry-repro"],
+  "name": "sentry-repro-e2e",
   "projectType": "application",
+  "sourceRoot": "apps/sentry-repro-e2e/src",
+  "tags": [],
   "targets": {
-    "build-ios": {
-      "executor": "@nrwl/detox:build",
-      "options": {
-        "detoxConfiguration": "ios.sim.debug"
-      },
-      "configurations": {
-        "production": {
-          "detoxConfiguration": "ios.sim.release"
-        }
-      }
-    },
-    "test-ios": {
-      "executor": "@nrwl/detox:test",
-      "options": {
-        "detoxConfiguration": "ios.sim.debug",
-        "buildTarget": "sentry-repro-e2e:build-ios"
-      },
-      "configurations": {
-        "production": {
-          "detoxConfiguration": "ios.sim.release",
-          "buildTarget": "sentry-repro-e2e:build-ios:production"
-        }
-      }
-    },
     "build-android": {
-      "executor": "@nrwl/detox:build",
-      "options": {
-        "detoxConfiguration": "android.emu.debug"
-      },
       "configurations": {
         "production": {
           "detoxConfiguration": "android.emu.release"
         }
+      },
+      "executor": "@nrwl/detox:build",
+      "options": {
+        "detoxConfiguration": "android.emu.debug"
       }
     },
-    "test-android": {
-      "executor": "@nrwl/detox:test",
-      "options": {
-        "detoxConfiguration": "android.emu.debug",
-        "buildTarget": "sentry-repro-e2e:build-ios"
-      },
+    "build-ios": {
       "configurations": {
         "production": {
-          "detoxConfiguration": "android.emu.release",
-          "buildTarget": "sentry-repro-e2e:build-ios:production"
+          "detoxConfiguration": "ios.sim.release"
         }
+      },
+      "executor": "@nrwl/detox:build",
+      "options": {
+        "detoxConfiguration": "ios.sim.debug"
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/sentry-repro-e2e/**/*.{ts,tsx,js,jsx}"]
+      },
+      "outputs": ["{options.outputFile}"]
+    },
+    "test-android": {
+      "configurations": {
+        "production": {
+          "buildTarget": "sentry-repro-e2e:build-ios:production",
+          "detoxConfiguration": "android.emu.release"
+        }
+      },
+      "executor": "@nrwl/detox:test",
+      "options": {
+        "buildTarget": "sentry-repro-e2e:build-ios",
+        "detoxConfiguration": "android.emu.debug"
+      }
+    },
+    "test-ios": {
+      "configurations": {
+        "production": {
+          "buildTarget": "sentry-repro-e2e:build-ios:production",
+          "detoxConfiguration": "ios.sim.release"
+        }
+      },
+      "executor": "@nrwl/detox:test",
+      "options": {
+        "buildTarget": "sentry-repro-e2e:build-ios",
+        "detoxConfiguration": "ios.sim.debug"
+      }
+    },
+    "ts": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          {
+            "command": "tsc -p apps/sentry-repro/tsconfig.app.json"
+          }
+        ]
       }
     }
-  },
-  "tags": [],
-  "implicitDependencies": ["sentry-repro"]
+  }
 }
