--- a/apps/sentry-repro/babel.config.json
+++ b/apps/sentry-repro/babel.config.json
@@ -1,3 +1,11 @@
 {
+  "plugins": [
+    [
+      "transform-inline-environment-variables",
+      {
+        "include": ["NODE_ENV", "NX_SENTRY_DIST", "NX_SENTRY_DSN"]
+      }
+    ]
+  ],
   "presets": ["module:metro-react-native-babel-preset"]
 }
