--- a/apps/sentry-repro/tsconfig.json
+++ b/apps/sentry-repro/tsconfig.json
@@ -1,15 +1,16 @@
 {
-  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "composite": true,
+    "declaration": true,
     "jsx": "react-native",
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
-    "skipLibCheck": true,
     "resolveJsonModule": true,
-    "composite": true,
-    "declaration": true
+    "skipLibCheck": true
   },
+  "exclude": ["node_modules"],
+  "extends": "../../tsconfig.base.json",
   "files": ["../../node_modules/@nrwl/react-native/typings/svg.d.ts"],
   "include": [],
   "references": [
@@ -19,6 +20,5 @@
     {
       "path": "./tsconfig.spec.json"
     }
-  ],
-  "exclude": ["node_modules"]
+  ]
 }
