--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "sentry-repro",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {},
-  "private": true,
+  "author": "Julian Paas",
   "dependencies": {
+    "@sentry/react-native": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.1",
@@ -33,7 +30,9 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "detox": "20.1.1",
+    "env-cmd": "^10.1.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.26.0",
@@ -55,8 +54,25 @@
     "react-native-svg": "13.7.0",
     "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "18.2.0",
+    "sortier": "^1.0.1",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
-  }
+  },
+  "engines": {
+    "node": ">=16.0.0 <19"
+  },
+  "license": "MIT",
+  "name": "sentry-repro",
+  "private": false,
+  "scripts": {
+    "android": "nx run-android sentry-repro",
+    "ios": "nx run-ios sentry-repro --install=false",
+    "lint": "nx run-many --target=lint --all --parallel --maxWarnings 0",
+    "pods": "cd apps/sentry-repro/ios && pod install --repo-update",
+    "sortier:all": "sortier './**/*.{css,html,js,json,jsx,ts,tsx}' '!**/__generated__' '!**/assets/i18n' '!**/build' '!**/dist' '!**/node_modules' '!**/Pods' '!**/tmp' '!**/vendor'",
+    "start": "env-cmd -f .env nx start sentry-repro",
+    "ts": "nx run-many --target=ts --all --parallel"
+  },
+  "version": "0.0.0"
 }
